2005-08-16  Akkana Peck  <akkana@cvs.gnome.org>

	* menus/image-menu.xml.in
	* app/actions/image-actions.c
	* app/actions/plug-in-actions.c
	* plug-ins/common/compose.c
	* plug-ins/common/decompose.c
	* plug-ins/common/vinvert.c: Remove erroneous extra *compose
	entries, and move *compose into a Components submenu (re IRC
	discussion); move Value Invert to near Invert (suggested by mitch)

2005-08-16  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontainerview.[ch]: added utility function
	gimp_container_view_install_properties() to reduce code duplication
	in classes implementing this interface.

	* app/widgets/gimpcontainerbox.c
	* app/widgets/gimpcontainercombobox.c
	* app/widgets/gimpcontainerentry.c: changed accordingly.

2005-08-16  Sven Neumann  <sven@gimp.org>

	* configure.in
	* plug-ins/uri/Makefile.am: redid the libgnomeui and gnome-vfs
	checks so that pkg-config combines the compiler and linker flags
	instead of concatenating them in the Makefile.

2005-08-15  Akkana Peck  <akkana@cvs.gnome.org>

	* app/actions/image-actions.c
	* app/tools/gimpaligntool.c
	* menus/image-menu.xml.in
	* plug-ins/common/AlienMap2.c
	* plug-ins/common/autostretch_hsv.c
	* plug-ins/common/borderaverage.c
	* plug-ins/common/c_astretch.c
	* plug-ins/common/ccanalyze.c
	* plug-ins/common/channel_mixer.c
	* plug-ins/common/color_enhance.c
	* plug-ins/common/colorify.c
	* plug-ins/common/colortoalpha.c
	* plug-ins/common/compose.c
	* plug-ins/common/decompose.c
	* plug-ins/common/exchange.c
	* plug-ins/common/fp.c
	* plug-ins/common/gradmap.c
	* plug-ins/common/hot.c
	* plug-ins/common/mapcolor.c
	* plug-ins/common/max_rgb.c
	* plug-ins/common/normalize.c
	* plug-ins/common/retinex.c
	* plug-ins/common/sample_colorize.c
	* plug-ins/common/semiflatten.c
	* plug-ins/common/smooth_palette.c
	* plug-ins/common/vinvert.c
	* plug-ins/rcm/rcm.c
	* plug-ins/script-fu/scripts/hsv-graph.scm: Move all color-related
	functions from the Image and Filters menus to a new toplevel